libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/fn-generics-tuple-path.jsonc
//@ run: fail
//@ description: fn/4 tuple generics with path as argument should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#tuple": [
      "::math::add"
      //~^ ERROR Use a simple identifier here
    ]
  },
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
